WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97772
Compilation failure on Windows-64 because of enabled YARR_JIT
https://bugs.webkit.org/show_bug.cgi?id=97772
Summary
Compilation failure on Windows-64 because of enabled YARR_JIT
Kai Koehne
Reported
2012-09-27 04:12:48 PDT
Compiling latest qtwebkit with Mingw-w64 compiler results in: jit\ExecutableAllocatorFixedVMPool.cpp:34:22: fatal error: sys/mman.h: No such file or directory This is because of change
https://bugs.webkit.org/show_bug.cgi?id=91052
, where YARR_JIT gets now defined to 1 . This results in ASSEMBLER to be defined to 1, too, which causes ENABLE_EXECUTABLE_ALLOCATOR_FIXED to be defined to 1 .... Following the reasoning in
https://bugs.webkit.org/process_bug.cgi
we shouldn't enable any JIT for WIndows-64.
Attachments
Disables YARR_JIT for Windows 64.
(948 bytes, patch)
2012-09-27 04:23 PDT
,
Kai Koehne
no flags
Details
Formatted Diff
Diff
Disables YARR_JIT for Windows 64
(1.03 KB, patch)
2012-09-28 05:05 PDT
,
Kai Koehne
no flags
Details
Formatted Diff
Diff
Disables YARR_JIT for Windows 64
(1.05 KB, patch)
2012-09-28 05:09 PDT
,
Kai Koehne
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kai Koehne
Comment 1
2012-09-27 04:23:55 PDT
Created
attachment 165973
[details]
Disables YARR_JIT for Windows 64.
Simon Hausmann
Comment 2
2012-09-27 04:30:45 PDT
Comment on
attachment 165973
[details]
Disables YARR_JIT for Windows 64. View in context:
https://bugs.webkit.org/attachment.cgi?id=165973&action=review
> Source/WTF/ChangeLog:8 > + JIT has to be disabled in general on Windows-64.
I think this could be explained with more than one sentence :)
Kai Koehne
Comment 3
2012-09-27 04:47:10 PDT
I'd actually wanted to link to
https://bugs.webkit.org/show_bug.cgi?id=65313
as the bug/commit disabling JIT for WIndows 64 in general.
Kai Koehne
Comment 4
2012-09-28 05:05:57 PDT
Created
attachment 166216
[details]
Disables YARR_JIT for Windows 64 It's still a sentence, though a longer one ;) I'm not sure whether Assembler/JIT is not available on Windows 64 bit in principle, or if it's just the mmap.h dependency that breaks it. However, the enabling of yarr_jit on Windows was done most probably by accident by the patch enabling llint, and this patch just reverts to the original behavior (no jit, no yarr_jit, no assembler on windows 64 bit) .
WebKit Review Bot
Comment 5
2012-09-28 05:07:41 PDT
Attachment 166216
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/Pl..." exit_code: 1 Source/WTF/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WTF/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kai Koehne
Comment 6
2012-09-28 05:09:11 PDT
Created
attachment 166218
[details]
Disables YARR_JIT for Windows 64 This time with spaces instead of tabs ...
WebKit Review Bot
Comment 7
2012-09-28 07:12:32 PDT
Comment on
attachment 166218
[details]
Disables YARR_JIT for Windows 64 Clearing flags on attachment: 166218 Committed
r129893
: <
http://trac.webkit.org/changeset/129893
>
WebKit Review Bot
Comment 8
2012-09-28 07:12:36 PDT
All reviewed patches have been landed. Closing bug.
Jonathan Liu
Comment 9
2012-10-01 01:59:30 PDT
A problem we have now is that the classic interpreter has been removed from WebKit so either JIT or LLINT must be enabled. Disabling JIT causes LLINT to be enabled but LLINT doesn't build properly on Windows yet: llint\LowLevelInterpreter.cpp:329:35: fatal error: LLIntAssembly.h: No such file or directory
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug