Disable YARR_JIT for Windows 64 bit https://bugs.webkit.org/show_bug.cgi?id=97772

Patch by Kai Koehne <kai.koehne@digia.com> on 2012-09-28
Reviewed by Simon Hausmann.

Using YARR_JIT requires ASSEMBLER, which in turn enables the
executable fixed allocator, which is mmap based (not available on
Windows).

* wtf/Platform.h:

Canonical link: https://commits.webkit.org/115900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129893 268f45cc-cd09-0410-ab3c-d52691b4dbfc